# Spawn

./: .gitignore  LICENSE  README.md  SPAWN_DOCTOR_SUMMARY.md  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md  changelog.md  commands.md  getting-started.md  spawn-doctor-signoff.md  spawn-doctor.md
src/devbootstrap/cli/: prompts.py
src/devbootstrap/core/: models.py
src/devbootstrap/generators/: project_generator.py
src/devbootstrap/templates/: base.py  data_science.py  fastapi.py  files.py  ml_project.py  python_script.py
src/devbootstrap/utils/: git.py
src/spawn/: __init__.py
src/spawn/cli/: app.py
src/spawn/core/: registry.py
src/spawn/generators/: project_generator.py
src/spawn/github/: exceptions.py  publisher.py  validators.py
src/spawn/templates/: base.py  data_science.py  fastapi.py  files.py  ml_project.py  python_script.py
src/spawn/utils/: doctor.py  exceptions.py  git.py  next_steps.py  success.py  uv.py  validators.py
tests/: test_app.py  test_doctor.py  test_generator.py  test_git.py  test_github_publisher.py  test_github_validators.py  test_models.py  test_prompts.py  test_registry.py  test_templates.py  test_uv.py  test_validators.py
